--- a/style.css
+++ b/style.css
@@ -13,3 +13,27 @@
 .main-content__button {
     font-family: "Roboto", sans-serif ;
 }
+body {
+    margin: 0;
+}
+.wrapper {
+    width: 80%;
+    margin: auto;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+.logo {
+    padding: 40px 0 40px 0;
+}
+.menu {
+    display: flex;
+    align-items: center;  
+}
+.menu__item {
+    padding: 0 13px;
+}
+.menu__item:last-child{
+    padding-right: 0;
+}
