--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.logo__title {
-    font-family: "PT serif", serif;
-}
 .menu__item {
     font-family: "Roboto", sans-serif ;
 }
@@ -23,13 +20,19 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    padding: 40px 0;
 }
 .logo {
-    padding: 40px 0 40px 0;
+    width: 190px;
+    height: 35px;
+    background: url(img/logo.svg);
+    /*padding: 40px 0;
+    font: bold 24px/31px "pt_serif", Arial, Helvetica, sans-serif;*/
 }
-.menu {
+    .menu {
     display: flex;
-    align-items: center;  
+    align-items: center;
+    font-family: roboto;
 }
 .menu__item {
     padding: 0 13px;
