--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-.menu__item {
-    font-family: "Roboto", sans-serif ;
-}
-.main-content__title {
-    font-family: "PT serif", serif;
-}
-.main-content__text {
-    font-family: "Roboto", sans-serif ;
-}
-.main-content__button {
-    font-family: "Roboto", sans-serif ;
-}
 body {
     margin: 0;
 }
@@ -17,6 +5,9 @@ body {
     width: 80%;
     margin: auto;
 }
+
+/*Начало шапки сайта*/
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -29,14 +20,76 @@ body {
     /*padding: 40px 0;
     font: bold 24px/31px "pt_serif", Arial, Helvetica, sans-serif;*/
 }
-    .menu {
+.menu {
     display: flex;
     align-items: center;
     font-family: roboto;
 }
 .menu__item {
-    padding: 0 13px;
+    position: relative;
+    margin-right: 26px;
+    font: 500 18px/21px "Roboto", arial, helvetica, sans-serif;
+    color: #000;
+    text-decoration: none;
+    transition: opacity .5s;
 }
-.menu__item:last-child{
-    padding-right: 0;
+.menu__item:last-child {
+    margin-right: 0;
+}
+.menu__item:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #0056EC;
+    opacity: 0;
+    transition: opacity .5s;
+}
+.menu__item:hover {
+    opacity: .5;
+}
+.menu__item:hover::after, .menu__item_active:after {
+    opacity: 1;
+}
+.menu__item_active::after {
+    display: block;
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #0056EC;
+    opacity: 1;
+}
+.menu__item:hover::after {
+    display: block;
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #0056EC;
+}
+.menu__item_active:hover:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background-color: #0056EC;
+}
+
+/*Окончание шапки сайта*/
+
+.main-content__title {
+    font-family: "PT serif", serif;
+}
+.main-content__text {
+    font-family: "Roboto", sans-serif ;
+}
+.main-content__button {
+    font-family: "Roboto", sans-serif ;
 }
