--- a/style.css
+++ b/style.css
@@ -12,13 +12,12 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 40px 0;
+    margin-bottom: 128px;
 }
 .logo {
     width: 190px;
     height: 35px;
     background: url(img/logo.svg);
-    /*padding: 40px 0;
-    font: bold 24px/31px "pt_serif", Arial, Helvetica, sans-serif;*/
 }
 .menu {
     display: flex;
@@ -27,7 +26,7 @@ body {
 }
 .menu__item {
     position: relative;
-    margin-right: 26px;
+    margin-right: 27px;
     font: 500 18px/21px "Roboto", arial, helvetica, sans-serif;
     color: #000;
     text-decoration: none;
@@ -84,12 +83,35 @@ body {
 
 /*Окончание шапки сайта*/
 
+/*Начало основного блока*/
+
+.main-content {
+    padding-top: 76px;
+    padding-bottom: 100px;
+    padding-right: 65%;
+    background: top right no-repeat url(img/main.svg);
+}
 .main-content__title {
-    font-family: "PT serif", serif;
+    font: 700 66px/87px "PT serif", serif;
+    margin: 0 0 35px 0;
+}
+.main-content__title_highlight {
+    background: #ECF3FF;
 }
 .main-content__text {
-    font-family: "Roboto", sans-serif ;
+    font: 400 22px/26px "Roboto", sans-serif ;
+    margin: 0 0 58px 0;
 }
 .main-content__button {
-    font-family: "Roboto", sans-serif ;
+    font: 500 18px/21px "Roboto", sans-serif ;
+    color: #fff;
+    background: #0056EC;
+    padding: 18px 35px 18px 21px;
+    border-radius: 4px;
+    transition: opacity .5s;
+    text-decoration: none;
 }
+.main-content__button:hover {
+    opacity: .5;
+}
+/*Окончание основного блока*/
