--- a/style.css
+++ b/style.css
@@ -23,14 +23,26 @@ body {
     display: flex;
     align-items: center;
     font-family: roboto;
+    padding-top: 2px;
 }
 .menu__item {
     position: relative;
-    margin-right: 27px;
     font: 500 18px/21px "Roboto", arial, helvetica, sans-serif;
     color: #000;
     text-decoration: none;
     transition: opacity .5s;
+}
+.menu__item_start {
+    margin-right: 25px;
+}
+.menu__item_active{
+    margin-right: 25px;
+}
+.menu__item_about {
+    margin-right: 28px;
+}
+.menu__item_blog {
+    margin-right: 27px;
 }
 .menu__item:last-child {
     margin-right: 0;
@@ -86,21 +98,21 @@ body {
 /*Начало основного блока*/
 
 .main-content {
-    padding-top: 76px;
-    padding-bottom: 100px;
+    padding-top: 73px;
+    padding-bottom: 285px;
     padding-right: 65%;
-    background: top right no-repeat url(img/main.svg);
+    background: 100% no-repeat url(img/main.svg);
 }
 .main-content__title {
     font: 700 66px/87px "PT serif", serif;
-    margin: 0 0 35px 0;
+    margin: 0 0 37px 0;
 }
 .main-content__title_highlight {
     background: #ECF3FF;
 }
 .main-content__text {
-    font: 400 22px/26px "Roboto", sans-serif ;
-    margin: 0 0 58px 0;
+    font: 400 21.5px/26px "Roboto", sans-serif ;
+    margin: 0 0 60px 0; 
 }
 .main-content__button {
     font: 500 18px/21px "Roboto", sans-serif ;
@@ -115,3 +127,19 @@ body {
     opacity: .5;
 }
 /*Окончание основного блока*/
+.footer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+.footer__item {
+    width: 8px;
+    height: 8px;
+    background-color: #C8DBFB;
+    border-radius: 4px;
+    opacity: 0.7;
+    margin-right: 4px;
+}
+.footer__item:last-child {
+margin-right: 0;
+}
