--- a/style.css
+++ b/style.css
@@ -17,7 +17,46 @@ body {
 .logo {
     width: 190px;
     height: 35px;
-    background: url(img/logo.svg);
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.logo__text {
+    font: 700 24px/32px "PT serif", serif;
+}
+.logo__blue {
+    width: 28px;
+    height: 28px;
+    background-color: #0056EC;
+    opacity: 0.7;
+    border-radius: 15px;
+    animation-name: invisible;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+}
+.logo__light-blue {
+    width: 28px;
+    height: 28px;
+    background-color: #C8DBFB;
+    opacity: 0.7;
+    border-radius: 15px;
+    position: absolute;
+    top: 7px; left: 9px;
+    animation-name: invisible;
+    animation-duration: 1.4s;
+    animation-timing-function: ease-out;
+}
+
+@keyframes invisible {
+    from {
+        opacity: 0.1;
+        top: 0px; left: 0px;
+    }
+
+    to {
+        opacity: 0.7;
+        
+    }
 }
 .menu {
     display: flex;
@@ -264,14 +303,12 @@ margin-right: 0;
     .wrapper {
         width: 75%;
     }
-    .logo {
-        width: 36px;
-        height: 35px;
-        background: url(img/logo.svg);
-    }
     .header {
         padding: 24px 0 0;
         margin: 0 0 50px 0;
+    }
+    .menu {
+        display: none;
     }
     .main-content {
         background: top center no-repeat url(img/main1336px.svg);
@@ -299,27 +336,20 @@ margin-right: 0;
 
 }
 
-@media (max-width:600px) {
+@media (max-width:900px) {
     .wrapper {
         width: 88%;  
-    }
-    .logo {
-        width: 36px;
-        height: 35px;
-        background: url(img/logo-mobile.svg);
     }
     .header {
         padding: 24px 0 0;
         margin: 0 0 28px 0;
     }
-    .menu {
-        display: none;
-    }
-    .main-content {
+    
+    /*.main-content {
         background: top center no-repeat url(img/main375px.svg);
         padding: 62% 0 0;
         text-align: center;
-    }
+    }*/
     .main-content__title {
         font: 700 30px/40px "PT serif", serif;
         margin: 0 0 30px 0;
@@ -448,21 +478,24 @@ margin-right: 0;
   }
 }
 
-@media (max-width:460px) {
+/*@media (max-width:460px) {
    .main-content {
     background-size: 65%;
    }
-}
+}*/
 
 
 @media (max-width:375px) {
     .wrapper {
         width: 88%;
     }
-    .logo {
+    /*.logo {
         width: 36px;
         height: 35px;
         background: url(img/logo-mobile.svg);
+    }*/
+    .logo__text {
+        display: none;
     }
     .header {
         padding: 24px 0 0;
@@ -603,7 +636,7 @@ margin-right: 0;
     transition-duration: .25s;
   }
 }
-@media (min-width:600px) {
+@media (min-width:900px) {
     .hamburger-menu {
         display: none;
     }
